--- a/enums/_lib_d4c_.errmsg.html
+++ b/enums/_lib_d4c_.errmsg.html
@@ -81,6 +81,7 @@
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidqueueconcurrency" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Concurrency</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidqueuetag" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Tag</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#missingthisduebindissue" class="tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#queueisfull" class="tsd-kind-icon">Queue<wbr>IsFull</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#twodecoratorsincompatible" class="tsd-kind-icon">Two<wbr>Decorators<wbr>Incompatible</a></li>
 							</ul>
 						</section>
@@ -95,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">Class<wbr>And<wbr>Method<wbr>Decorators<wbr>Incompatible<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;ClassAndMethodDecoratorsIncompatible&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L41">src/lib/D4C.ts:41</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L41">src/lib/D4C.ts:41</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -105,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">Instance<wbr>Invalid<wbr>Tag<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;instanceInvalidTag: it should be string/symbol/undefined&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L35">src/lib/D4C.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L35">src/lib/D4C.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +116,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Class<wbr>Decorator<wbr>Parameter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidClassDecoratorParameter&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L39">src/lib/D4C.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L39">src/lib/D4C.ts:39</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +126,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Decorator<wbr>Option<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;not valid option when using decorators&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L36">src/lib/D4C.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L36">src/lib/D4C.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -135,7 +136,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Queue<wbr>Concurrency<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidQueueConcurrency&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L37">src/lib/D4C.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L37">src/lib/D4C.ts:37</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -145,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Queue<wbr>Tag<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidQueueTag&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L38">src/lib/D4C.ts:38</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L38">src/lib/D4C.ts:38</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -155,7 +156,17 @@
 					<div class="tsd-signature tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;missingThisDueBindIssue&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L42">src/lib/D4C.ts:42</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L42">src/lib/D4C.ts:42</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="queueisfull" class="tsd-anchor"></a>
+					<h3>Queue<wbr>IsFull</h3>
+					<div class="tsd-signature tsd-kind-icon">Queue<wbr>IsFull<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;QueueIsFull&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L43">src/lib/D4C.ts:43</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +176,7 @@
 					<div class="tsd-signature tsd-kind-icon">Two<wbr>Decorators<wbr>Incompatible<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;TwoDecoratorsInCompatible&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/d663ea2/src/lib/D4C.ts#L40">src/lib/D4C.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/d4c-queue/blob/de9cae0/src/lib/D4C.ts#L40">src/lib/D4C.ts:40</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -212,6 +223,9 @@
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_lib_d4c_.errmsg.html#missingthisduebindissue" class="tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="_lib_d4c_.errmsg.html#queueisfull" class="tsd-kind-icon">Queue<wbr>IsFull</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_lib_d4c_.errmsg.html#twodecoratorsincompatible" class="tsd-kind-icon">Two<wbr>Decorators<wbr>Incompatible</a>
